<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CategoryFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.cupcake.model.OrderViewModel" />

        <variable
            name="categoryFragment"
            type="com.example.cupcake.CategoryFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <RadioGroup
                android:id="@+id/material_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:checkedButton="@+id/plastic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/plastic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/green"
                    android:onClick="@{() -> viewModel.setCategory(@string/plastic)}"
                    android:text="@string/plastic" />

                <RadioButton
                    android:id="@+id/paper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/green"
                    android:onClick="@{() -> viewModel.setCategory(@string/paper)}"
                    android:text="@string/paper" />

                <RadioButton
                    android:id="@+id/glass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/green"
                    android:onClick="@{() -> viewModel.setCategory(@string/glass)}"
                    android:text="@string/glass" />

                <RadioButton
                    android:id="@+id/metal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/green"
                    android:onClick="@{() -> viewModel.setCategory(@string/metal)}"
                    android:text="@string/metal" />

                <RadioButton
                    android:id="@+id/organic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/green"
                    android:onClick="@{() -> viewModel.setCategory(@string/organic)}"
                    android:text="@string/organic" />

                <RadioButton
                    android:id="@+id/mixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/green"
                    android:onClick="@{() -> viewModel.setCategory(@string/mixed)}"
                    android:text="@string/mixed" />
            </RadioGroup>

            <View
                android:id="@+id/divider"
                android:background="@color/light_grey"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/material_options" />

            <TextView
                android:id="@+id/price_per_waste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@{@string/point_per_kg(viewModel.point)}"
                android:textColor="@color/black"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="250pts/kg"/>

            <Button
                android:id="@+id/cancel_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/side_margin"
                android:onClick="@{() -> categoryFragment.cancelOrder()}"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/next_button" />

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> categoryFragment.goToNextScreen()}"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/price_per_waste" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>